hphp/test/zend/good/zend/errmsg_005.php.exp
HipHop Fatal error: Can't use return value in write context in hphp/test/zend/good/zend/errmsg_005.php on line 10
