hphp/test/zend/good/zend/errmsg_005.php
<?php

class test {
	function foo() {
		return "blah";
	}
}

$t = new test;
$t->foo() = 1;

echo "Done\n";
?>